<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".AboutActivity">

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guidelineLef"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintGuide_percent="0.1" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guidelineR"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintGuide_percent="0.9" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guideline8"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintGuide_percent="0.84" />

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/constraintLayout2"
        android:layout_width="302dp"
        android:layout_height="224dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="32dp"
        app:layout_constraintBottom_toTopOf="@+id/guideline8"
        app:layout_constraintEnd_toStartOf="@+id/guidelineR"
        app:layout_constraintHorizontal_bias="0.263"
        app:layout_constraintStart_toStartOf="@+id/guidelineLef"
        app:layout_constraintTop_toBottomOf="@+id/imageView4"
        app:layout_constraintVertical_bias="0.0">

        <TextView
            android:id="@+id/textViewIme"
            android:layout_width="57dp"
            android:layout_height="22dp"
            android:layout_marginBottom="24dp"
            android:text="@string/_ime"
            android:textSize="18dp"
            app:layout_constraintBottom_toTopOf="@+id/textViewOpis"
            app:layout_constraintStart_toStartOf="parent" />

        <TextView
            android:id="@+id/textViewOpis"
            android:layout_width="47dp"
            android:layout_height="22dp"
            android:layout_marginBottom="64dp"
            android:text="@string/opis"
            android:textSize="18dp"
            app:layout_constraintBottom_toTopOf="@+id/textViewVerzija"
            app:layout_constraintStart_toStartOf="parent" />

        <TextView
            android:id="@+id/textViewVerzija"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="8dp"
            android:text="@string/verzija"
            android:textSize="18dp"
            app:layout_constraintBottom_toTopOf="@+id/textViewAvtor"
            app:layout_constraintStart_toStartOf="parent" />

        <TextView
            android:id="@+id/textViewAvtor"
            android:layout_width="63dp"
            android:layout_height="24dp"
            android:layout_marginBottom="8dp"
            android:text="@string/avtor"
            android:textSize="18dp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintStart_toStartOf="parent" />

        <TextView
            android:id="@+id/textViewImeValue"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/app_name"
            android:textSize="14sp"
            app:layout_constraintBaseline_toBaselineOf="@+id/textViewIme"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.184"
            app:layout_constraintStart_toEndOf="@+id/textViewIme" />

        <TextView
            android:id="@+id/textViewOpisValue"
            android:layout_width="203dp"
            android:layout_height="74dp"
            android:text="@string/opis_value"
            android:textSize="12sp"
            app:layout_constraintBaseline_toBaselineOf="@+id/textViewOpis"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.483"
            app:layout_constraintStart_toEndOf="@+id/textViewOpis" />

        <TextView
            android:id="@+id/textViewVerzijaValue"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/verzija_value"
            android:textSize="14sp"
            app:layout_constraintBaseline_toBaselineOf="@+id/textViewVerzija"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.07"
            app:layout_constraintStart_toEndOf="@+id/textViewVerzija" />

        <TextView
            android:id="@+id/textViewAvtorValue"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/avtor_value"
            android:textSize="14sp"
            app:layout_constraintBaseline_toBaselineOf="@+id/textViewAvtor"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.108"
            app:layout_constraintStart_toEndOf="@+id/textViewAvtor" />

    </androidx.constraintlayout.widget.ConstraintLayout>

    <ImageView
        android:id="@+id/imageView4"
        android:layout_width="276dp"
        android:layout_height="195dp"
        app:layout_constraintEnd_toStartOf="@+id/guidelineR"
        app:layout_constraintHorizontal_bias="0.336"
        app:layout_constraintStart_toStartOf="@+id/guidelineLef"
        app:layout_constraintTop_toTopOf="@+id/guideline12"
        app:srcCompat="@drawable/ozadje" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guideline12"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintGuide_percent="0.15" />
</androidx.constraintlayout.widget.ConstraintLayout>