<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">


  <com.google.android.material.button.MaterialButton
      android:id="@+id/btnVnos"
      android:layout_width="@dimen/button_width"
      android:layout_height="@dimen/button_height"
      android:onClick="onOpenVnosActivity"
      android:padding="0dp"
      android:text="@string/Vnos"
      android:textSize="@dimen/button_text_size"
      app:cornerRadius="15dp"
      app:iconGravity="textStart"
      app:iconPadding="0dp"
      app:layout_constraintBottom_toTopOf="@+id/guideline4"
      app:layout_constraintEnd_toStartOf="@+id/btnAbout"
      app:layout_constraintHorizontal_bias="0.5"
      app:layout_constraintStart_toStartOf="@+id/guidelineL"
      tools:ignore="TouchTargetSizeCheck" />

  <com.google.android.material.button.MaterialButton
      android:id="@+id/btnAbout"
      android:layout_width="100dp"
      android:layout_height="42dp"
      android:onClick="onOpenAboutActivity"
      android:padding="0dp"
      android:text="@string/about"
      android:textSize="@dimen/button_text_size"
      app:cornerRadius="15dp"
      app:iconGravity="textStart"
      app:iconPadding="0dp"
      app:layout_constraintBottom_toTopOf="@+id/guideline4"
      app:layout_constraintEnd_toStartOf="@+id/guidelineL2"
      app:layout_constraintHorizontal_bias="0.5"
      app:layout_constraintStart_toEndOf="@+id/btnVnos"
      tools:ignore="TouchTargetSizeCheck" />

  <ImageView
      android:id="@+id/imageView"
      android:layout_width="185dp"
      android:layout_height="183dp"
      app:layout_constraintBottom_toTopOf="@+id/constraintLayout"
      app:layout_constraintEnd_toStartOf="@+id/guidelineL2"
      app:layout_constraintStart_toStartOf="@+id/guidelineL"
      app:layout_constraintTop_toTopOf="@+id/guideline5"
      app:layout_constraintVertical_bias="0.166"
      app:srcCompat="@drawable/farm" />

  <androidx.constraintlayout.widget.Guideline
      android:id="@+id/guidelineL"
      android:layout_width="wrap_content"
      android:layout_height="wrap_content"
      android:orientation="vertical"
      app:layout_constraintGuide_percent="0.2" />

  <androidx.constraintlayout.widget.Guideline
      android:id="@+id/guidelineL2"
      android:layout_width="wrap_content"
      android:layout_height="wrap_content"
      android:orientation="vertical"
      app:layout_constraintGuide_percent="0.8" />

  <androidx.constraintlayout.widget.Guideline
      android:id="@+id/guideline4"
      android:layout_width="wrap_content"
      android:layout_height="wrap_content"
      android:orientation="horizontal"
      app:layout_constraintGuide_percent="0.8" />

  <androidx.constraintlayout.widget.Guideline
      android:id="@+id/guideline5"
      android:layout_width="wrap_content"
      android:layout_height="wrap_content"
      android:orientation="horizontal"
      app:layout_constraintGuide_percent="0.2" />

  <TextView
      android:id="@+id/textViewNaslov"
      android:layout_width="wrap_content"
      android:layout_height="wrap_content"
      android:text="@string/naslov"
      android:textSize="@dimen/header_text_size"

      app:layout_constraintBottom_toTopOf="@+id/guideline5"
      app:layout_constraintEnd_toStartOf="@+id/guidelineL2"
      app:layout_constraintStart_toStartOf="@+id/guidelineL" />

  <androidx.constraintlayout.widget.ConstraintLayout
      android:id="@+id/constraintLayout"
      android:layout_width="209dp"
      android:layout_height="80dp"
      android:layout_marginBottom="80dp"
      app:layout_constraintBottom_toTopOf="@+id/btnVnos"
      app:layout_constraintEnd_toStartOf="@+id/guidelineL2"
      app:layout_constraintStart_toStartOf="@+id/guidelineL">

    <TextView
        android:id="@+id/textViewZasedenost3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/ime_hleva"
        android:textSize="20sp"
        app:layout_constraintBottom_toTopOf="@+id/textViewZasedenost2"
        app:layout_constraintStart_toStartOf="parent" />

    <TextView
        android:id="@+id/textViewZasedenost2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/lokacija_hleva"
        android:textSize="20sp"
        app:layout_constraintBottom_toTopOf="@+id/textViewZasedenost"
        app:layout_constraintStart_toStartOf="parent" />

    <TextView
        android:id="@+id/textViewZasedenost"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/zasedenost_hleva"
        android:textSize="20sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent" />
  </androidx.constraintlayout.widget.ConstraintLayout>

</androidx.constraintlayout.widget.ConstraintLayout>

